	EShellWindowPrivate.
	(init_view): Set it to the newly added view.  Also, switch the
	notebooks to the new page.
	(component_button_clicked_callback): Set current_view here as
	well, for existing views.
	(component_view_activate): New.
	(component_view_deactivate): New.
	(init_view): Deactivate existing view, activate new selected view.
	(component_button_clicked_callback): Likewise.

2003-08-17  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (setup_widgets): Pass TRUE for @resize to
	gtk_paned_pack2() for the view notebook.

2003-07-29  Ettore Perazzoli  <ettore@ximian.com>

	* e-splash.c, e-splash.h: Removed from the build.

2003-07-25  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell.c (e_shell_close_all_windows): Oops.  Traverse the
	window list with a local "next" variable like we did in the
	original code.  Otherwise, we crash because the list is being
	modified at each gtk_widget_destroy().

2003-07-25  Ettore Perazzoli  <ettore@ximian.com>

	* e-storage-browser.c (class_init): Set up "page_switched" signal.
	(e_storage_browser_show_path): Emit "page_switched".

	* e-storage-browser.h: New signal "page_switched".

2003-07-25  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c: Removed member ui_container from
	EShellWindowPrivate.
	(e_shell_window_peek_shell): New.
	(e_shell_window_peek_bonobo_ui_component): New.
	(e_shell_window_new): Don't set the ui_container anymore, just get
	it ourselves.  Also call e_shell_window_commands_setup().

	* e-shell-window-commands.c, e-shell-window-commands.h: New files
	implementing the commands for the shell windows.

	* e-shell.c (e_shell_close_all_windows): Renamed from
	e_shell_destroy_all_windows().

	* main.c (idle_cb): Create a new window using
	e_shell_create_window().

	* e-shell-importer.h: Define _E_SHELL_IMPORTER_H_ to prevent
	multiple inclusion, instead of __IMPORTER_H__.  Also, do not
	#include <bonobo/bonobo-ui-component.h>.
